--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -135,6 +135,7 @@
   <script type="text/javascript" src="/javascripts/angular/services.js"></script>
   <script type="text/javascript" src="/javascripts/angular/alert-box/services.js"></script>
   <script type="text/javascript" src="/javascripts/angular/alert-box/directives.js"></script>
+  <script type="text/javascript" src="/javascripts/angular/data-series/services.js"></script>
   <script type="text/javascript" src="/javascripts/angular/data-series/registration.js"></script>
 
 {% endblock %}
