--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -133,6 +133,7 @@
   </script>
 
   <script type="text/javascript" src="/javascripts/angular/services.js"></script>
+  <script type="text/javascript" src="/javascripts/angular/alert-box/services.js"></script>
   <script type="text/javascript" src="/javascripts/angular/alert-box/directives.js"></script>
   <script type="text/javascript" src="/javascripts/angular/data-series/registration.js"></script>
 
