setting the services instances ids

--- a/webapp/views/configuration/projects.html
+++ b/webapp/views/configuration/projects.html
@@ -529,6 +529,16 @@
           <h4 class="modal-title">Select the project to which you want to import the data</h4>
         </div>
         <div class="modal-body">
+
+
+          <div>
+
+          </div>
+          <div>
+            
+          </div>
+
+
           <div class="form-group" ng-show="model.length > 0">
             <div class="radio" ng-repeat="element in model">
               <label>
