Creating link to map server when status of view service is done

--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -296,6 +296,9 @@ bootstrap-decorator span {
   margin-bottom: 25px !important;
 }
 
+#messagesModal li {
+  overflow: auto;
+}
 
 /*
   It fixes intersection nav to include check icon
