--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -50,7 +50,8 @@
   };
 
   var configuration = {
-    analysis: {[ analysis|json|safe ]} || {}
+    analysis: {[ analysis|json|safe ]} || {},
+    projectId: {[ projectId ]}
   }
 </script>
 
