--- a/webapp/views/configuration/projects.html
+++ b/webapp/views/configuration/projects.html
@@ -307,7 +307,9 @@
                   if(json.Analysis !== undefined && json.Analysis.length > 0) $scope.hasAnalysis = true;
                   if(json.Views !== undefined && json.Views.length > 0) $scope.hasView = true; 
 
-                  if(json.Collectors !== undefined && json.Collectors.length > 0 && $scope.services.COLLECT.length === 0) {
+                  if($scope.model === undefined || $scope.model.length === 0) {
+                    setError(new Error("To import this file you need to have at least one project"));
+                  } else if(json.Collectors !== undefined && json.Collectors.length > 0 && $scope.services.COLLECT.length === 0) {
                     setError(new Error("To import this file you need to have at least one collector service"));
                   } else if(json.Analysis !== undefined && json.Analysis.length > 0 && $scope.services.ANALYSIS.length === 0) {
                     setError(new Error("To import this file you need to have at least one analysis service"));
