Do not show ftp providers to store analisys result

--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -45,7 +45,8 @@
       InterpolationMethod: {[ Enums.InterpolationMethod|json|safe ]},
       ResolutionType: {[ Enums.ResolutionType|json|safe ]},
       InterestAreaType: {[ Enums.InterestAreaType|json|safe ]},
-      DataSeriesFormat: {[ Enums.DataSeriesFormat|json|safe ]}
+      DataSeriesFormat: {[ Enums.DataSeriesFormat|json|safe ]},
+      DataProviderType: {[ Enums.DataProviderType|json|safe ]}
     }
   };
 
