--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -137,6 +137,7 @@
   <script type="text/javascript" src="/javascripts/angular/alert-box/directives.js"></script>
   <script type="text/javascript" src="/javascripts/angular/data-series/services.js"></script>
   <script type="text/javascript" src="/javascripts/angular/data-series/registration.js"></script>
+  <script type="text/javascript" src="/javascripts/angular/data-series/directives.js"></script>
 
 {% endblock %}
 
